--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -1,6 +1,7 @@
 /* src/components/Options/Options.module.css */
 .optionsContainer {
-  border: 2px solid purple; /* Options bileşeni için mor çerçeve */
+  border: 2px solid rgb(75, 75, 74);
+  background-color: aliceblue;
   padding: 10px;
   display: flex;
   gap: 10px;
