--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,6 @@
 
 .description {
   font-size: 16px;
-  color: blue; /* Açıklama için mavi renk */
+  color:rgb(75, 75, 74) 
   margin-bottom: 20px;
 }
